...
            tokenProvider,
            merchantStoreCurrency,
            it,
            object : BluesnapServiceCallback {
              override fun onSuccess() {
                runOnUiThread(Runnable {
                  promise.resolve("Success")

                })
              }

              override fun onFailure() {
                runOnUiThread(Runnable {
...
